# dci

./: Cargo.toml  readme.md
src/: closed.rs  lib.rs  matrix.rs  parallel.rs  sequential.rs
src/tests/: dataset.rs  datasets.rs  itemset.rs  mod.rs
